# transformer-bool-repr

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
.github/workflows/: check.yml  lint.yml
boolrepr/: data.py  models.py  train.py
notebooks/: ffn.ipynb  ffn.py  ffn_clustering.py  transformer_clustering.py
src/boolrepr/: clustering.py  data.py  models.py  trainer.py
src/boolrepr/scripts/: train_ffn.py  train_transformer.py
tests/: test_data.py  test_models.py
