[project]
name = "transformer-bool-repr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.3.5",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.3",
    "pytest>=9.0.1",
    "ruff>=0.14.3",
]
