[project]
name = "transformer-bool-repr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "marimo>=0.19.4",
    "einops>=0.8.1",
    "typer>=0.20.0",
    "numpy>=2.3.5",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.3",
    "ty>=0.0.12",
]
